--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-hook-form": "^7.2.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
+    "react-typed": "^1.2.0",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
