--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^4.6.0",
     "emailjs": "^3.4.0",
     "emailjs-com": "^2.6.4",
+    "firebase": "^8.4.3",
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.1",
