--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^17.0.1",
     "react-download-link": "^2.3.0",
     "react-hook-form": "^7.2.3",
+    "react-mouse-particles": "^1.1.5",
     "react-particles-js": "^3.4.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.2",
